plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.1'
	id 'io.spring.dependency-management' version '1.1.0'
	id "org.springdoc.openapi-gradle-plugin" version '1.6.0'
}

group = 'org.analyzer'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = '19'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	configureEach {
		resolutionStrategy {
			exclude group: "com.sun.activation", module: "jakarta.activation"
		}
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework:spring-aspects'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.apache.commons:commons-compress:1.22'
	implementation 'org.asynchttpclient:async-http-client:2.12.3'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.5.3'
}

springBoot {
	buildInfo()
}

openApi {
	outputDir.set(file("$buildDir/docs"))
	outputFileName.set("openapi.json")
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
	it.options.compilerArgs.add('-Xlint:preview')
}